parser/y.output

state 0
	$accept: .top $end 

	'['  shift 9
	OPQUERY  shift 4
	ATOM  shift 6
	.  error

	top  goto 1
	phrases  goto 2
	phrase  goto 3
	conjterm  goto 5
	compterm  goto 7
	list  goto 8

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  phrases.    (1)
	phrases:  phrases.phrase 

	'['  shift 9
	OPQUERY  shift 4
	ATOM  shift 6
	.  reduce 1 (src line 47)

	phrase  goto 10
	conjterm  goto 5
	compterm  goto 7
	list  goto 8

state 3
	phrases:  phrase.    (2)

	.  reduce 2 (src line 54)


state 4
	phrase:  OPQUERY.disjterms '.' 

	'['  shift 9
	ATOM  shift 6
	.  error

	disjterms  goto 11
	conjterms  goto 12
	conjterm  goto 13
	compterm  goto 7
	list  goto 8

state 5
	phrase:  conjterm.'.' 
	phrase:  conjterm.OPRULE '.' 
	phrase:  conjterm.OPRULE disjterms '.' 

	'.'  shift 14
	OPRULE  shift 15
	.  error


state 6
	conjterm:  ATOM.    (12)
	compterm:  ATOM.'(' params ')' 
	compterm:  ATOM.'(' ')' 

	'('  shift 16
	.  reduce 12 (src line 100)


state 7
	conjterm:  compterm.    (13)

	.  reduce 13 (src line 102)


state 8
	compterm:  list.    (16)

	.  reduce 16 (src line 115)


state 9
	list:  '['.']' 
	list:  '['.params ']' 
	list:  '['.param '|' param ']' 
	list:  '['.param '|' ']' 

	'['  shift 9
	']'  shift 17
	'_'  shift 24
	ATOM  shift 20
	STRING  shift 22
	INTEGER  shift 26
	FLOAT  shift 27
	VARIABLE  shift 23
	.  error

	params  goto 18
	compterm  goto 25
	number  goto 21
	list  goto 8
	param  goto 19

state 10
	phrases:  phrases phrase.    (3)

	.  reduce 3 (src line 56)


state 11
	phrase:  OPQUERY disjterms.'.' 

	'.'  shift 28
	.  error


state 12
	disjterms:  conjterms.    (8)
	disjterms:  conjterms.';' disjterms 

	';'  shift 29
	.  reduce 8 (src line 84)


state 13
	conjterms:  conjterm.    (10)
	conjterms:  conjterm.',' conjterms 

	','  shift 30
	.  reduce 10 (src line 92)


state 14
	phrase:  conjterm '.'.    (5)

	.  reduce 5 (src line 65)


state 15
	phrase:  conjterm OPRULE.'.' 
	phrase:  conjterm OPRULE.disjterms '.' 

	'.'  shift 31
	'['  shift 9
	ATOM  shift 6
	.  error

	disjterms  goto 32
	conjterms  goto 12
	conjterm  goto 13
	compterm  goto 7
	list  goto 8

state 16
	compterm:  ATOM '('.params ')' 
	compterm:  ATOM '('.')' 

	')'  shift 34
	'['  shift 9
	'_'  shift 24
	ATOM  shift 20
	STRING  shift 22
	INTEGER  shift 26
	FLOAT  shift 27
	VARIABLE  shift 23
	.  error

	params  goto 33
	compterm  goto 25
	number  goto 21
	list  goto 8
	param  goto 35

state 17
	list:  '[' ']'.    (27)

	.  reduce 27 (src line 138)


state 18
	list:  '[' params.']' 

	']'  shift 36
	.  error


state 19
	params:  param.    (17)
	params:  param.',' params 
	list:  '[' param.'|' param ']' 
	list:  '[' param.'|' ']' 

	','  shift 37
	'|'  shift 38
	.  reduce 17 (src line 119)


state 20
	compterm:  ATOM.'(' params ')' 
	compterm:  ATOM.'(' ')' 
	param:  ATOM.    (19)

	'('  shift 16
	.  reduce 19 (src line 125)


state 21
	param:  number.    (20)

	.  reduce 20 (src line 127)


state 22
	param:  STRING.    (21)

	.  reduce 21 (src line 128)


state 23
	param:  VARIABLE.    (22)

	.  reduce 22 (src line 129)


state 24
	param:  '_'.    (23)

	.  reduce 23 (src line 130)


state 25
	param:  compterm.    (24)

	.  reduce 24 (src line 131)


state 26
	number:  INTEGER.    (25)

	.  reduce 25 (src line 133)


state 27
	number:  FLOAT.    (26)

	.  reduce 26 (src line 135)


state 28
	phrase:  OPQUERY disjterms '.'.    (4)

	.  reduce 4 (src line 58)


state 29
	disjterms:  conjterms ';'.disjterms 

	'['  shift 9
	ATOM  shift 6
	.  error

	disjterms  goto 39
	conjterms  goto 12
	conjterm  goto 13
	compterm  goto 7
	list  goto 8

state 30
	conjterms:  conjterm ','.conjterms 

	'['  shift 9
	ATOM  shift 6
	.  error

	conjterms  goto 40
	conjterm  goto 13
	compterm  goto 7
	list  goto 8

state 31
	phrase:  conjterm OPRULE '.'.    (6)

	.  reduce 6 (src line 71)


state 32
	phrase:  conjterm OPRULE disjterms.'.' 

	'.'  shift 41
	.  error


state 33
	compterm:  ATOM '(' params.')' 

	')'  shift 42
	.  error


state 34
	compterm:  ATOM '(' ')'.    (15)

	.  reduce 15 (src line 110)


state 35
	params:  param.    (17)
	params:  param.',' params 

	','  shift 37
	.  reduce 17 (src line 119)


state 36
	list:  '[' params ']'.    (28)

	.  reduce 28 (src line 144)


state 37
	params:  param ','.params 

	'['  shift 9
	'_'  shift 24
	ATOM  shift 20
	STRING  shift 22
	INTEGER  shift 26
	FLOAT  shift 27
	VARIABLE  shift 23
	.  error

	params  goto 43
	compterm  goto 25
	number  goto 21
	list  goto 8
	param  goto 35

state 38
	list:  '[' param '|'.param ']' 
	list:  '[' param '|'.']' 

	'['  shift 9
	']'  shift 45
	'_'  shift 24
	ATOM  shift 20
	STRING  shift 22
	INTEGER  shift 26
	FLOAT  shift 27
	VARIABLE  shift 23
	.  error

	compterm  goto 25
	number  goto 21
	list  goto 8
	param  goto 44

state 39
	disjterms:  conjterms ';' disjterms.    (9)

	.  reduce 9 (src line 86)


state 40
	conjterms:  conjterm ',' conjterms.    (11)

	.  reduce 11 (src line 94)


state 41
	phrase:  conjterm OPRULE disjterms '.'.    (7)

	.  reduce 7 (src line 77)


state 42
	compterm:  ATOM '(' params ')'.    (14)

	.  reduce 14 (src line 104)


state 43
	params:  param ',' params.    (18)

	.  reduce 18 (src line 121)


state 44
	list:  '[' param '|' param.']' 

	']'  shift 46
	.  error


state 45
	list:  '[' param '|' ']'.    (30)

	.  reduce 30 (src line 152)


state 46
	list:  '[' param '|' param ']'.    (29)

	.  reduce 29 (src line 147)


19 terminals, 12 nonterminals
31 grammar rules, 47/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
61 working sets used
memory: parser 62/240000
15 extra closures
60 shift entries, 1 exceptions
25 goto entries
23 entries saved by goto default
Optimizer space used: output 77/240000
77 table entries, 0 zero
maximum spread: 19, maximum offset: 38
